# deadlockery

./: README.md
deadlock-demo-parser/: .gitignore  CMakeLists.txt  main.cpp  reader.hh
deadlock-dumper/: .gitignore  deadlock-dumper.sln  deadlock-dumper.vcxproj  main.cpp
deadlock-other-data/: stringmap.json
deadlock-steamworks/: .gitignore  DeadlockSteamworks.sln  abilities.vdata_c  deadlockery.sln
deadlock-steamworks/DeadlockAPI/: DeadlockAPI.csproj  DeadlockClient.cs
deadlock-steamworks/DeadlockAPI/Enums/: Heroes.cs  MatchResult.cs
deadlock-steamworks/DeadlockMatchInfoServer/: Cache.cs  DeadlockMatchInfoServer.csproj  Program.cs
deadlock-steamworks/Examples/Builds/: Builds.csproj  Program.cs
deadlock-steamworks/deadlockery/: DeadlockAPIExample.csproj  DeadlockClient.cs  Program.cs  deadlockery.csproj
deadlock-steamworks/deadlockery/Enums/: Heroes.cs  MatchResult.cs
deadlock-vdata/: game_asset_tags.vdata.json  generic_data.vdata.json  heroes.vdata.json  light_style_event_types.vdata.json  light_styles.vdata.json  misc.vdata.json  modifiers.vdata.json  nav_hulls.vdata.json  nav_hulls_presets.vdata.json  navlinks.vdata.json  npc_units.vdata.json  ping_wheel_message_types.vdata.json  ping_wheel_messages.vdata.json  precipitation.vdata.json  propdata.vdata.json  scale_functions.vdata.json
kv3bs/: Program.cs  kv3bs.csproj  kv3bs.sln
